--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "neo4j-driver": "^1.7.0",
     "pug": "2.0.0-beta11",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
