--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start:dev": "nodemon ./bin/www",
     "lint": "eslint . --ext .js --fix"
   },
   "dependencies": {
@@ -21,6 +22,11 @@
   "devDependencies": {
     "eslint": "5.8.0",
     "eslint-config-airbnb-base": "13.1.0",
-    "eslint-plugin-import": "2.14.0"
+    "eslint-plugin-import": "2.14.0",
+    "nodemon": "1.18.5"
+  },
+  "nodemonConfig": {
+    "ignore": ["node_modules/*", "public/*", "views/*"],
+    "delay": "2500"
   }
 }
