--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^6.1.0",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "moment": "2.22.2",
     "morgan": "~1.9.0",
     "neo4j-driver": "^1.7.0",
     "pug": "2.0.0-beta11",
@@ -26,7 +27,11 @@
     "nodemon": "1.18.5"
   },
   "nodemonConfig": {
-    "ignore": ["node_modules/*", "public/*", "views/*"],
+    "ignore": [
+      "node_modules/*",
+      "public/*",
+      "views/*"
+    ],
     "delay": "2500"
   }
 }
